{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Main",
            "id": "28179ff4-ba6d-4eef-a668-cd749e22b5da",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "183ca19d-88d1-49c8-8553-15a7080908d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeftRight",
                    "type": "Button",
                    "id": "30087a9b-cce3-4270-8646-7afe4e3a580f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveForwardBackward",
                    "type": "Button",
                    "id": "8b3e3a17-2c8c-4295-a4db-425f507b03d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "0c2b8020-1c93-47ad-a799-463f75f4d804",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9970d99f-65b2-47ea-8e50-24d45f2af37d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "LeftRight",
                    "id": "431c994a-e633-4e1e-8ea7-eed7e3e02fb5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "9c0b116d-6f7e-41b8-8901-f59beb9cff33",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "58406d22-c466-468c-85c8-f764d6c64fe2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ForwardBackward",
                    "id": "fc007c3b-49b4-4d1e-8655-9e2b814e1ef7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardBackward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "e2a4d554-5199-451b-8fa3-7344ab2acb99",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "bf13b3e2-e8da-42e9-9d83-9905f5389689",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f5e0722b-a7c3-4f20-a525-db5ff155b791",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}